# cannelloni

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  flake.nix
firmware/: Makefile  Makefile.am  fx2pipe.ihx  fx2pipe_static.cc  original_firmware_fx2pipe.ihx
firmware/include/: fx2regs.h
firmware/src/: fx2pipe.c
m4/: cannelloni.m4
src/: cannelloni.c  config.h  ezusb.c  ezusb.h
udev_rule/: z70_usbfx2.rules
